- fixed projectlist overflow

--- a/css/index.css
+++ b/css/index.css
@@ -17,13 +17,24 @@
 }
 
 #project-list-container{
+    position: relative;
     box-sizing: border-box;
     border-radius: 16px;
     border: 4px solid black;
     justify-content: flex-start;
     height: 512px;
+    padding: 16px;
     flex-wrap: wrap;
-    padding: 8px;
+    overflow-y: scroll;
+}
+
+#project-list-container::-webkit-scrollbar{
+    width: 5px;
+}
+
+#project-list-container::-webkit-scrollbar-thumb{
+    background-color: black;
+    border-radius: 16px;
 }
 
 .project-item{
@@ -43,7 +54,7 @@
     box-sizing: border-box;
     padding: 8px;
     border: 4px solid black;
-    transition: height 1s, width 1s;
+    transition: height .5s, width .5s;
     border-radius: 16px;
     background-color: white;
     width: 200px;
@@ -51,6 +62,7 @@
     z-index: 0;
 }
 .project-item-content:hover{
+
     z-index: 1;
     width: 250px;
     height: 250px;
